--- a/.github/workflows/airflow.yml
+++ b/.github/workflows/airflow.yml
@@ -11,6 +11,8 @@ on:
     branches: [main]
   # Can be manually triggered from the Actions tab, if needed:
   workflow_dispatch:
+  push:
+    branches: [third-party-airflow]
 
 permissions:
   contents: read
