--- a/.github/workflows/airflow.yml
+++ b/.github/workflows/airflow.yml
@@ -125,12 +125,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+          repository: airflow/airflow
+
       - name: "Cleanup docker"
         run: ./scripts/ci/cleanup_docker.sh
+
       - name: Fetch incoming commit ${{ github.sha }} with its parent
         uses: actions/checkout@v4
         with:
           ref: ${{ github.sha }}
+          repository: airflow/airflow
           fetch-depth: 2
           persist-credentials: false
       - name: "Install Breeze"
