--- a/.github/workflows/airflow.yml
+++ b/.github/workflows/airflow.yml
@@ -188,7 +188,7 @@ jobs:
       use-uv: ${{ needs.build-info.outputs.force-pip == 'true' && 'false' || 'true' }}
       upgrade-to-newer-dependencies: ${{ needs.build-info.outputs.upgrade-to-newer-dependencies }}
       constraints-branch: ${{ needs.build-info.outputs.default-constraints-branch }}
-      docker-cache: false
+      docker-cache: 'disabled'
       disable-airflow-repo-cache: true
 
   wait-for-ci-images:
